# 20s-pa04-braden-wallace

./: Anneal.cpp  Anneal.h  BruteForce.cpp  BruteForce.h  CMakeLists.txt  graph.cpp  graph.h  main.cpp
.github/workflows/: build.yaml
data/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt
